# ADIOS

./: .autotools  .gitignore  CMakeLists.txt  COPYING  COPYRIGHT  FindADIOS.cmake  INSTALL  KNOWN_BUGS  MAC_ISSUES.txt  Makefile  Makefile.am  Makefile.am.mine  Makefile.am.r334  Makefile.in  Makefile.in.mine  Makefile.in.r334  NEWS  README  README.md  RELEASE_VERSIONS  TODO  TODO-1.4  TODO-1.4.1  TODO-strings  TODO_INTERNAL  aclocal.m4  adios.c  adios.h  adios_bp_v1.c  adios_bp_v1.h  adios_config  adios_config.flags.cmake  adios_config.flags.in  adios_config.flags.makesrc.in  adios_config.in  adios_config.makesrc.in  adios_dart.c  adios_datatap.c  adios_internals.c  adios_internals.h  (+49 more)
examples-code/time-index/: Makefile  Makefile.am  Makefile.in  adios_timeindex.c  bp2ncd  config_timeindex.xml  gwrite_temperature.ch  jobewok  restart.bp  restart.nc
examples/C/: CMakeLists.txt  Makefile.am  Makefile.in
mxml/: CMakeLists.txt  Makefile.am  config.h
mxml/mxml-2.9/: mxml.list.in  testmxml.c
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile.in.orig  Makefile1  adios.c  adios.h  adios_adaptive.c  adios_bp_v1.c  adios_bp_v1.h  adios_bp_v2.c  adios_bp_v2.h  adios_dart.c  adios_datatap.c  adios_dimes.c  adios_endianness.c  adios_endianness.h  adios_errcodes.h  adios_error.c  adios_error.h  adios_internals.c  adios_internals.c1  adios_internals.c2  adios_internals.h  adios_internals_m.c  adios_internals_mxml.c  adios_internals_mxml.h  adios_internals_nompi.c  adios_internals_tmp.c  adios_internals_v2.c  adios_internals_v2.h  adios_m.c  adios_mpi.c  adios_mpi_aggregate.c  adios_mpi_amr.c  adios_mpi_amr1.c  adios_mpi_cio.c  adios_mpi_lustre.c  adios_mpi_nwu.c  (+74 more)
src/ardma/: Makefile.am  Makefile.in  README  ardma_client.h  ardma_common.h  ardma_logger.h  ardma_server.h  ib_client.c  ib_common.h  ib_server.c  lookup3.c  lookup3.h  portal_client.c  portal_common.h  portal_server.c  portals_client.c  portals_common.c  portals_common.h  portals_server.c  test.c  test2.c
src/core/: a2sel.c  a2sel.h  adios.c  adios_bp_v1.c  adios_bp_v1.h  adios_clock.c  adios_clock.h  adios_copyspec.c  adios_copyspec.h  adios_endianness.c  adios_endianness.h  adios_error.c  adios_icee.h  adios_infocache.c  adios_infocache.h  adios_internals.c  adios_internals.h  adios_internals_mxml.c  adios_internals_mxml.h  adios_logger.c  adios_logger.h  adios_read.c  adios_read_ext.c  adios_read_hooks.c  adios_read_hooks.h  adios_read_transformed.h  adios_read_v1.c  adios_selection_util.c  adios_selection_util.h  adios_subvolume.c  adios_subvolume.h  adios_timing.c  adios_timing.h  adios_transform_alacrity.c  adios_transform_alacrity_write.c  adios_transform_compress.c  adios_transform_compress_write.c  adios_transform_methods.c  adios_transform_mloc.c  adios_transforms_common.c  (+52 more)
src/ewok/: go_c  go_fortran
src/jaguar/: job
src/mxml/: .gitignore  CMakeLists.txt  Makefile.am  cmake_try_longlong.c  config.h
src/nssi/: adios_nssi_config.c  adios_nssi_config.h  adios_nssi_filter.c  nssi_coupling_server.cpp  nssi_staging_server.cpp
src/public/: adios.h  adios_error.h  adios_link.h  adios_query.h  adios_read.h  adios_read_ext.h  adios_read_v1.h  adios_read_v1_defs.h  adios_read_v2.h  adios_read_v2_fwd.h  adios_schema.h  adios_selection.h  adios_transform_methods.h  adios_types.h  adios_version.h.in  adios_xpmem.h  adiost_callback_api.h  flexpath.h  mpidummy.h
src/query/: Makefile.am  Makefile.in  Makefile.plugins  Makefile.plugins.cmake  adios_query.c  adios_query.h  adios_query_hooks.c  adios_query_hooks.h  adios_query_mod.f90  adiosf_query.c  common_query.c  common_query.h  common_query_read.c  fastbit_adios.c  fastbit_adios.h  mock_alacrity.c  myTestCases.c  query_alac.c  query_alacrity.c  query_fastbit.c  query_minmax.c  query_utils.c  query_utils.h  useindex.c
src/read/: read_bp.c  read_bp_staged.c  read_bp_staged1.c  read_dart.c  read_dataspaces.c  read_datatap.c  read_dimes.c  read_flexpath.c  read_icee.c  read_nssi.c  read_xpmem.c  read_xpmem.h
src/staging_server/: Makefile.am  Makefile.in  bpindexing_thread.c  bpindexing_thread.h  bpworker_thread.c  bpwriter_thread.c  bpwriter_thread.h  dirutil.c  dirutil.h  events.h  globals.h  main.c  mem.c  mem.h  mymutex.h  options.c  options.h  precedence.c  precedence.h  queue.c  queue.h  rdma_connections  transport_thread.c  worker_thread.h
src/transforms/: Makefile.plugins  Makefile.plugins.cmake  adios_transform_alacrity_read.c  adios_transform_alacrity_write.c  adios_transform_aplod_read.c  adios_transform_aplod_write.c  adios_transform_blosc_common.h  adios_transform_blosc_read.c  adios_transform_blosc_write.c  adios_transform_bzip2_read.c  adios_transform_bzip2_write.c  adios_transform_compress_read.c  adios_transform_compress_write.c  adios_transform_identity_read.c  adios_transform_identity_read.h  adios_transform_identity_write.c  adios_transform_isobar_read.c  adios_transform_isobar_write.c  adios_transform_lz4_common.h  adios_transform_lz4_read.c  adios_transform_lz4_write.c  adios_transform_mgard_read.c  adios_transform_mgard_write.c  adios_transform_mloc_read.c  adios_transform_mloc_write.c  adios_transform_sz_read.c  adios_transform_sz_write.c  adios_transform_szip.h  adios_transform_szip_read.c  adios_transform_szip_write.c  adios_transform_template_read.c  adios_transform_template_write.c  adios_transform_zfp_common.h  adios_transform_zfp_read.c  adios_transform_zfp_write.c  adios_transform_zlib_read.c  adios_transform_zlib_write.c  transform_plugins.h  zcheck_comm.h
src/write/: adios_adaptive.c  adios_chunk.c  adios_dart.c  adios_dataspaces.c  adios_datatap.c  adios_dimes.c  adios_flexpath.c  adios_icee.c  adios_inline.c  adios_mpi.c  adios_mpi_aggregate.c  adios_mpi_amr.c  adios_mpi_amr1.c  adios_mpi_bgq.c  adios_mpi_cio.c  adios_mpi_gpfs.c  adios_mpi_lustre.c  adios_mpi_stagger.c  adios_mpi_stripe.c  adios_nc4.c  adios_nssi.c  adios_phdf5.c  adios_posix.c  adios_posix1.c  pqueue.h  (+10 more)
trunk/: Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  runconf
utils/: CMakeLists.txt  Makefile.am  Makefile.in  README
(+3389 files in other folders)
